--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,8 @@ Test Deployment:
   script:
     - "cd .\\src"
     - "dotnet restore SDL.csproj"
-    - "powershell.exe -file \".\\ReplaceVersion.ps1\""
-#    - "powershell.exe -file \".\\SignBuild.ps1\" 1" -- Requires --no-build
+    - "powershell.exe -file \"..\\ReplaceVersion.ps1\""
+#    - "powershell.exe -file \"..\\SignBuild.ps1\" 1" -- Requires --no-build
     - "dotnet pack -c Debug -o .\\"
 
 Production Deployment: 
@@ -30,8 +30,8 @@ Production Deployment:
   script:
     - "cd .\\src"
     - "dotnet restore SDL.csproj"
-    - "powershell.exe -file \".\\ReplaceVersion.ps1\""
+    - "powershell.exe -file \"..\\ReplaceVersion.ps1\""
     - "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\MSBuild\\15.0\\Bin\\msbuild.exe\" SDL.csproj /p:Configuration=\"Release\" /p:BuildProjectReferences=true"
-#    - "powershell.exe -file \".\\SignBuild.ps1\" 0"
+#    - "powershell.exe -file \"..\\SignBuild.ps1\" 0"
     - "dotnet pack -c Release -o .\\"
     - "dotnet nuget push *.nupkg -k %NUGET_API_KEY% -s \"https://www.nuget.org\""
